<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Instructions">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#000000"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:logo="@mipmap/app_logo"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_below="@id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout

        android:background="@color/color_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">
    <TextView
        android:id="@+id/text_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/instructions"
        android:textColor="@color/navy_blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_browse_recipes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:text="@string/how_it_works"
        android:textColor="@color/css_gray"
        android:textSize="16sp"
        android:textStyle="italic" />
    <TextView
        android:id="@+id/Textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:text="@string/works"
        android:textColor="@color/grey_dark"
        android:textSize="16sp"
        android:textStyle="italic" />
    <TextView
        android:id="@+id/Textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="2dp"
        android:text="@string/floating"
        android:textColor="@color/grey_dark"
        android:textSize="16sp"
        android:textStyle="italic" />
    <TextView
        android:id="@+id/Textview3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="2dp"
        android:text="@string/merry_number"
        android:textColor="@color/grey_dark"
        android:textSize="16sp"
        android:textStyle="italic" />
    <TextView
        android:id="@+id/Textview4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="2dp"
        android:text="@string/enrollments"
        android:textColor="@color/navy_blue"
        android:textSize="16sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/Textview5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/by"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/navy_blue"
        android:textSize="16sp"
        android:textStyle="italic" />

    </LinearLayout>
    </ScrollView>
</RelativeLayout>